sites/all/themes/asb/sass/_header.scss
/**
 * @file
 * Navigation Styling
 */

@import "base";

#navigation {
  .block {
    margin-bottom: 0;
  }
  .block-menu .block-title,
  .block-menu-block .block-title {
    @include element-invisible();
  }
}

#header {
  width: 100%;
  position: relative;
  z-index: 10;
  background-repeat: repeat-x !important;
  // overflow: hidden;
  // height: 170px;
  #site-name {
    height: 81px;
    position: relative;
    width: 100%;
    z-index: 10;
    background-image: url('../images/logostrip.png?1376927784');
    background-position: center top;
    background-repeat: repeat-x !important;
    margin: 0;
    a {
      display: block;
      width: 100%;
      height: 100%;
      span {
        @include offscreen();
      }
    }
  }
  #navigation {
    position: relative;
    width: 100%;
    background: $backdrop;
    .region-header {
      margin: 0 auto;
    }
    .block-asb-scheme,
    .block-menu-block {
      vertical-align: top;
      display: inline-block;
    }
    .block-menu-block {
      ul.menu {
        margin-top: 0 !important;
      }
      li {
        border-right: 1px $text-color solid;
        padding: 1em 1em 2em 1em;
      }
      .description { 
        display: block;
        line-height: 1.875em;
      }
      .description,
      .logout {
        color: $nav-description-color;
        a {
          color: $text-color;
        }
      }
    }
    .title {
      font-size: 15px;
      color: $nav-title-color;
    }
    .username,
    .logout { line-height: 2; }
    .block-asb-scheme {
      padding-left: 1em;
      .asb-scheme-user-message>div {
        vertical-align: top;
      }
    }
  }

  @include breakpoint( sm, max-width ){
    .block-menu-block {
      .menu-block-wrapper {
        text-align: left;
        display: inline-block;
        margin: 0 auto;
      }
    }
  }

  @include breakpoint( sm ){

    .block-asb-scheme,
    .block-menu-block {
      display: inline-block;
    }
  }
  @include breakpoint( md ){

    background-image: url('../images/logostrip.png?1376927784');
    background-position: center bottom;
    #site-name {
      width: 428px;
      background-image: none;
      display: block;
      float: left;
    }

    #navigation {
      width: auto;
      margin-left: 0;
      margin-right: 0;
      float: left;
      display: block;
      line-height: 1em;
      background-color: transparent;
      .region-header {
        max-width: none;
        margin: 0;
      }
      .block-menu-block {
        vertical-align: top;
        display:inline-block;
        padding: 0;
        ul.menu {
          padding: 0;
          margin: 0;
        }
      }
      .block-asb-scheme {
        vertical-align: top;
        display:inline-block;
      }
    }

  }

}

.front {

  #header {
    #site-name {
      float: none;
      a {
        background-image: url('../images/logo_phone.png?1376927784');
        background-repeat: no-repeat;
        background-position: center;
        display: block;
        width: 100%;
      }
      background-position: center top;
      @include zigzag-border ($accent, $brand);
    }
    #what-is-an-action-switchboard {
      margin: 0 auto;
      @include box-sizing( border-box );
      padding: .5em 0 .75em 0;
    }
    @include breakpoint(md){
      height: 81px;
      background-image: url('../images/logostrip_home.png?1376927784');
      background-position: center bottom;

      #name-and-slogan {
        
        display:block;
        float: left;
        width: 428px;
    
        #site-name {
          height: 81px;
          background-image: none;
          background-color: transparent;
          a {
            background-image: none;
          }
        }

        #what-is-an-action-switchboard {
          position: absolute;
          background-color: transparent;
          width: 428px;
          height: 120px;
          z-index: 100;
          margin: 0;
          padding: 0;
          line-height: 1;
          margin-left: 0;
          margin-right: 0;
          background-image: url('../images/logo_home.png?1376927784');
          background-position: center bottom;
          a {
            text-indent: -10000px;
            display: block;
            overflow: hidden;
          }
        }
      }
    }
  } 
}

.not-front {
  #header {
    @include breakpoint(md) {
      height: 81px;
      #navigation {
        top: 0;
      }
    }
  }
}

.logged-in {
  #navigation {
    @include breakpoint( sm, max-width ){
      .block-menu-block {
        float: none;
        li.last {
          border-right: none !important;
        }
      }
      .block-asb-scheme {
        display: block;
        text-align: center;
        .asb-scheme-user-message {
          @include clearfix;
          margin: 0 auto;
        }
        .title,
        .username,
        .userdashboard,
        .logout {
          text-align: left;
          font-size: 12px;
          display: inline-block;
          vertical-align: bottom;
          line-height: 1.5;
        }      
        .username { margin: 0 .25em; }
      }      
    }
  }
}


#header {
  a {
    color: $nav-title-color;
  }
  #navigation {
    .block-menu-block {
      background: none;
      ul li {
        display: inline-block;
        margin-right: .5em;
      }
    }
    #block-asb-scheme-user-message,
    #block-system-user-menu {
      padding: 1em;
    }
  }

  #block-system-user-menu,
  #block-asb-scheme-user-message,
  .block-menu-block ul li {
    .userdashboard {
      @include zen-clear;
      display: inline-block;
      .icon {
        @include font-icon-base($family:"entypo", $font-size: 2em, $width: .5em, $margin: 0.2em, $color: $nav-title-color);
        @extend %entypo-tools;
      }
    }
    .logout {
      display: inline-block;
      margin-left: 10px;
    }
    .login,
    .register {
      a {
        color: $nav-title-color;
      }
    }
    &.is-active a, 
    &.is-active span {
      color: $text-color;
    }
  }

}

#nav-find {
  color: #fff;
  cursor: pointer;
  @include font-icon-base($family:"entypo", $font-size: 1.65em, $margin: 0em, $width: .3em);
  @extend %entypo-search;
  &:before {
    position: absolute;
    width: 48px;
    margin-top: -2px;
    content: "\1F50D";
    text-align: right;
  }
}

.front {

  #header-image-strip {
    display: none;
    @include breakpoint( md ) {
      display: block;
      position: absolute;
      top: 72px;
      width: 100%;
      overflow: hidden;
      white-space: nowrap;
      z-index: 1;
      font-size: 0;
      ul,
      li {
        margin:0;
        padding:0;
      }
      li {
        display: inline-block;
      }
      img{
        display: block;
        width: 166px;
        height: auto;
      }
      .logged-in.admin-menu & {
        top: 78px;
      }
    }
  }

}

.front.logged-in.admin-menu {
 #header-image-strip {
    @include breakpoint( md ) {
      top: 92px;
    }
  }
}

